[NOD-781] feat: add standard error list on OpenAPI
